{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 237,
  "lineage": "a5c662d3-9432-0c39-dac4-6e82ca441c29",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1d30f2c40c4c701",
            "arn": "arn:aws:ec2:us-east-1:350787096140:instance/i-0aa0abc28036b9574",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa0abc28036b9574",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0adfcd4cda29fe0e8",
            "private_dns": "ip-10-2-1-31.ec2.internal",
            "private_ip": "10.2.1.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082e1f111d0ceec85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0108c91ca7c224444",
            "tags": {
              "Name": "DB-Server"
            },
            "tags_all": {
              "Name": "DB-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00cf35972f3e82192"
            ]
          },
          "dependencies": [
            "aws_security_group.webdmz-sg-vpc-2",
            "aws_subnet.vpc-2-net",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc-1-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1d30f2c40c4c701",
            "arn": "arn:aws:ec2:us-east-1:350787096140:instance/i-01369bf9ec2f80cc0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01369bf9ec2f80cc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0761b784065424dff",
            "private_dns": "ip-10-1-1-180.ec2.internal",
            "private_ip": "10.1.1.180",
            "public_ip": "54.152.134.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05cd5c6c58f638143",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6057e888b9daffc",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001d715fd78f020dc"
            ]
          },
          "dependencies": [
            "aws_security_group.webdmz-sg-vpc-1",
            "aws_subnet.vpc-1-public",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-1-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:internet-gateway/igw-0b46d9e0eb64778c5",
            "id": "igw-0b46d9e0eb64778c5",
            "owner_id": "350787096140",
            "tags": {
              "Name": "vpc-1-IG"
            },
            "tags_all": {
              "Name": "vpc-1-IG"
            },
            "vpc_id": "vpc-04faadb77131905a3"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-1-def-rte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:route-table/rtb-093a26df1d1ba04ad",
            "id": "rtb-093a26df1d1ba04ad",
            "owner_id": "350787096140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0e33a9e77d7d78f92",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0b46d9e0eb64778c5",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "vpc-1-def-rte"
            },
            "tags_all": {
              "Name": "vpc-1-def-rte"
            },
            "timeouts": null,
            "vpc_id": "vpc-04faadb77131905a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-1-IG",
            "aws_vpc.vpc-1",
            "aws_vpc_peering_connection.vpc-1-2-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-2-peer-rte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:route-table/rtb-0cb11e4ca5f8108f3",
            "id": "rtb-0cb11e4ca5f8108f3",
            "owner_id": "350787096140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0e33a9e77d7d78f92",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e29a8ca922bee055"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-2",
            "aws_vpc_peering_connection.vpc-1-2-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-1-peer-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0300dc67f0f1f2c19",
            "route_table_id": "rtb-093a26df1d1ba04ad",
            "subnet_id": "subnet-0a6057e888b9daffc"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-1-IG",
            "aws_route_table.vpc-1-def-rte",
            "aws_subnet.vpc-1-public",
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2",
            "aws_vpc_peering_connection.vpc-1-2-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-2-peer-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061eb6d28f3e56242",
            "route_table_id": "rtb-0cb11e4ca5f8108f3",
            "subnet_id": "subnet-0108c91ca7c224444"
          },
          "dependencies": [
            "aws_route_table.vpc-2-peer-rte",
            "aws_subnet.vpc-2-net",
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2",
            "aws_vpc_peering_connection.vpc-1-2-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webdmz-sg-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:security-group/sg-001d715fd78f020dc",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001d715fd78f020dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WebDMZ",
            "name_prefix": "",
            "owner_id": "350787096140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebDMZ"
            },
            "tags_all": {
              "Name": "WebDMZ"
            },
            "timeouts": null,
            "vpc_id": "vpc-04faadb77131905a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webdmz-sg-vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:security-group/sg-00cf35972f3e82192",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cf35972f3e82192",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All ICMP - IPv4",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WebDMZ",
            "name_prefix": "",
            "owner_id": "350787096140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebDMZ"
            },
            "tags_all": {
              "Name": "WebDMZ"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e29a8ca922bee055"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:subnet/subnet-0a6057e888b9daffc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6057e888b9daffc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "350787096140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-public"
            },
            "tags_all": {
              "Name": "vpc-1-public"
            },
            "vpc_id": "vpc-04faadb77131905a3"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-2-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:subnet/subnet-0108c91ca7c224444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0108c91ca7c224444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350787096140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-2-net"
            },
            "tags_all": {
              "Name": "vpc-2-net"
            },
            "vpc_id": "vpc-0e29a8ca922bee055"
          },
          "dependencies": [
            "aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:vpc/vpc-04faadb77131905a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0eebc8fe228e06f4c",
            "default_route_table_id": "rtb-0de56eed9e7fa2ae2",
            "default_security_group_id": "sg-0bc4db1e3a9f0fd60",
            "dhcp_options_id": "dopt-0f8addaa8ec3a2158",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04faadb77131905a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de56eed9e7fa2ae2",
            "owner_id": "350787096140",
            "tags": {
              "Name": "vpc-1"
            },
            "tags_all": {
              "Name": "vpc-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350787096140:vpc/vpc-0e29a8ca922bee055",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0cfd99eab0908f181",
            "default_route_table_id": "rtb-0a2e78cbd40d9e124",
            "default_security_group_id": "sg-0acf3293d4957f7ca",
            "dhcp_options_id": "dopt-0f8addaa8ec3a2158",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e29a8ca922bee055",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2e78cbd40d9e124",
            "owner_id": "350787096140",
            "tags": {
              "Name": "vpc-2"
            },
            "tags_all": {
              "Name": "vpc-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-1-2-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e33a9e77d7d78f92",
            "peer_owner_id": "350787096140",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0e29a8ca922bee055",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between VPC-1 and VPC-2"
            },
            "tags_all": {
              "Name": "VPC Peering between VPC-1 and VPC-2"
            },
            "vpc_id": "vpc-04faadb77131905a3"
          },
          "dependencies": [
            "aws_vpc.vpc-1",
            "aws_vpc.vpc-2"
          ]
        }
      ]
    }
  ]
}